<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.example.pixltest.activity.MainActivity" />

        <variable
            name="viewModel"
            type="com.example.pixltest.view_model.MainActivityVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolBar"
            android:layout_width="0dp"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/design_default_color_primary"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tvScreenTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/search_image"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivButtonRight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivButtonRight"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{()->activity.toWevView()}"
                android:padding="4dp"
                android:src="@mipmap/web"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvScreenTitle"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvImage"
            selectionPosition="@={viewModel.currentLastItemPos}"
            setGridRVAdapter="@{viewModel.imagesRVAdapter}"
            spamCount="@{4}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:padding="5dp"
            android:scrollbars="none"
            android:backgroundTint="@color/TRANSPARENT"
            app:layout_constraintBottom_toTopOf="@id/searchView"
            app:layout_constraintTop_toBottomOf="@id/toolBar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clProgressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/HALF_TRANSPARENT"
            android:clickable="true"
            android:visibility="@{viewModel.fullScreenLoading}"
            app:layout_constraintBottom_toTopOf="@id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            tools:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLoadingMore"
            android:layout_width="match_parent"
            android:background="?attr/bgColor"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.showLoadingMore}"
            app:layout_constraintBottom_toTopOf="@id/searchView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:text="@string/loading_more"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvImage">

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:src="@mipmap/search"
                app:tint="?attr/iconTintColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/etSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etSearch"
                editTextValue="@={viewModel.q}"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/search_here"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="?attr/textColor"
                android:textColorHint="@color/GREY_9B9B9B"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSearch"
                app:layout_constraintStart_toEndOf="@id/ivSearch"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:onClick="@{()->viewModel.searchImage()}"
                android:text="@string/search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/etSearch"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>